--- a/css/main.css
+++ b/css/main.css
@@ -1,3 +1,11 @@
+* {
+  margin: 0;
+  padding: 0; }
+
 body {
-  background-color: red;
-  color: #fff; }
+  background-color: #262626; }
+
+.header {
+  width: 100%;
+  height: 100vh;
+  background: linear-gradient(rgba(0, 0, 0, 0.8), rgba(0, 0, 0, 0.6)), url(../images/bg.jpeg) no-repeat center; }
