--- a/scss/_layout.scss
+++ b/scss/_layout.scss
@@ -1,4 +1,7 @@
-body {
-    background-color: red;
-    color: #fff;
+.header {
+    width: 100%;
+    height: 100vh;
+    background: linear-gradient(rgba($color-black, .8), rgba($color-black, .6)), url(../images/bg.jpeg)no-repeat center;
+
+    .brand{}
 }
