--- a/css/main.css
+++ b/css/main.css
@@ -5,7 +5,22 @@
 body {
   background-color: #262626; }
 
+.logo {
+  font-size: 70px;
+  color: #d3ab55;
+  display: block;
+  width: 110px;
+  height: 110px;
+  border: 3px solid #d3ab55; }
+
 .header {
   width: 100%;
   height: 100vh;
-  background: linear-gradient(rgba(0, 0, 0, 0.8), rgba(0, 0, 0, 0.6)), url(../images/bg.jpeg) no-repeat center; }
+  background: linear-gradient(rgba(0, 0, 0, 0.8), rgba(0, 0, 0, 0.6)), url(../images/bg.jpeg) no-repeat center;
+  position: relative; }
+  .header .brand {
+    position: absolute;
+    top: 15%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    color: #fff; }
