--- a/scss/_layout.scss
+++ b/scss/_layout.scss
@@ -2,6 +2,14 @@
     width: 100%;
     height: 100vh;
     background: linear-gradient(rgba($color-black, .8), rgba($color-black, .6)), url(../images/bg.jpeg)no-repeat center;
+    position: relative;
 
-    .brand{}
+    .brand {
+        position: absolute;
+        top: 15%;
+        left: 50%;
+        transform: translate(-50%, -50%);
+        color: #fff;
+
+    }
 }
