create mixin flexLayout

--- a/scss/_base.scss
+++ b/scss/_base.scss
@@ -2,6 +2,12 @@ $color-dark: #262626;
 $color-black:#000;
 $color-primary:#d3ab55;
 
+@mixin flexLayout {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
 
 * {
     margin: 0;
