--- a/css/main.css
+++ b/css/main.css
@@ -8,10 +8,13 @@ body {
 .logo {
   font-size: 70px;
   color: #d3ab55;
-  display: block;
   width: 110px;
   height: 110px;
-  border: 3px solid #d3ab55; }
+  border: 3px solid #d3ab55;
+  border-radius: 50%;
+  display: flex;
+  justify-content: center;
+  align-items: center; }
 
 .header {
   width: 100%;
