--- a/css/main.css
+++ b/css/main.css
@@ -26,4 +26,6 @@ body {
     top: 15%;
     left: 50%;
     transform: translate(-50%, -50%);
-    color: #fff; }
+    color: #fff;
+    display: flex;
+    align-items: center; }
