--- a/scss/_layout.scss
+++ b/scss/_layout.scss
@@ -10,6 +10,8 @@
         left: 50%;
         transform: translate(-50%, -50%);
         color: #fff;
+        display: flex;
+        align-items: center;
 
     }
 }
