--- a/css/main.css
+++ b/css/main.css
@@ -16,6 +16,23 @@ body {
   justify-content: center;
   align-items: center; }
 
+.main-name {
+  font-family: "Nunito", sans-serif, cursive;
+  font-size: 50px;
+  color: #bbb;
+  font-weight: 300;
+  letter-spacing: 2px;
+  text-transform: uppercase; }
+
+.sub-name {
+  font-family: "Josefin Sans", sans-serif;
+  font-size: 18px;
+  color: #bbb;
+  text-align: center;
+  font-weight: 300;
+  letter-spacing: 2px;
+  text-transform: uppercase; }
+
 .header {
   width: 100%;
   height: 100vh;
