--- a/scss/_component.scss
+++ b/scss/_component.scss
@@ -7,3 +7,18 @@
     border-radius: 50%;
     @include flexLayout;
 }
+
+.main-name {
+    font-family: $font-nunito;
+    font-size: 50px;
+    color: $color-secondary;
+    @include textStyles;
+}
+
+.sub-name {
+    font-family: $font-josefinSans;
+    font-size: 18px;
+    color: $color-secondary;
+    text-align: center;
+    @include textStyles;
+}
