mixin centering and css for header-banner

--- a/scss/_base.scss
+++ b/scss/_base.scss
@@ -23,6 +23,12 @@ cursive;
     text-transform: uppercase;
 }
 
+@mixin centering ($topValue) {
+    position: absolute;
+    top: $topValue;
+    left: 50%;
+    transform: translate(-50%, -50%);
+}
 
 * {
     margin: 0;
