--- a/scss/_layout.scss
+++ b/scss/_layout.scss
@@ -5,14 +5,14 @@
     position: relative;
 
     .brand {
-        position: absolute;
-        top: 15%;
-        left: 50%;
-        transform: translate(-50%, -50%);
         display: flex;
         align-items: center;
-
+        @include centering(15%);
     }
 
-    
+    &-banner {
+        @include centering(50%);
+    }
+
+
 }
