--- a/css/main.css
+++ b/css/main.css
@@ -40,9 +40,14 @@ body {
   background: linear-gradient(rgba(0, 0, 0, 0.8), rgba(0, 0, 0, 0.6)), url(../images/bg.jpeg) no-repeat center;
   position: relative; }
   .header .brand {
+    display: flex;
+    align-items: center;
     position: absolute;
     top: 15%;
     left: 50%;
-    transform: translate(-50%, -50%);
-    display: flex;
-    align-items: center; }
+    transform: translate(-50%, -50%); }
+  .header-banner {
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%); }
