--- a/css/main.css
+++ b/css/main.css
@@ -34,6 +34,13 @@ body {
   letter-spacing: 2px;
   text-transform: uppercase; }
 
+.main-heading {
+  font-family: "Dancing Script", cursive;
+  font-size: 100px;
+  font-weight: 300;
+  color: #d3ab55;
+  margin-bottom: 40px; }
+
 .header {
   width: 100%;
   height: 100vh;
@@ -47,6 +54,8 @@ body {
     left: 50%;
     transform: translate(-50%, -50%); }
   .header-banner {
+    text-align: center;
+    color: #fff;
     position: absolute;
     top: 50%;
     left: 50%;
