--- a/css/main.css
+++ b/css/main.css
@@ -41,6 +41,13 @@ body {
   color: #d3ab55;
   margin-bottom: 40px; }
 
+.sub-heading {
+  font-family: "Josefin Sans", sans-serif;
+  font-size: 60px;
+  font-weight: 300;
+  color: #bbb;
+  margin-bottom: 80px; }
+
 .header {
   width: 100%;
   height: 100vh;
