--- a/scss/_component.scss
+++ b/scss/_component.scss
@@ -31,3 +31,12 @@
     color: $color-primary;
     margin-bottom: 40px;
 }
+
+.sub-heading {
+    font-family: $font-josefinSans;
+    font-size: 60px;
+    font-weight: 300;
+    color: $color-secondary;
+    margin-bottom: 80px;
+
+}
