main-btn component

--- a/scss/_component.scss
+++ b/scss/_component.scss
@@ -40,3 +40,12 @@
     margin-bottom: 80px;
 
 }
+
+.main-btn {
+    width: 170px;
+    height: 45px;
+    font-family: $font-josefinSans;
+    font-size: 14px;
+    text-transform: uppercase;
+    letter-spacing: 1px;
+}
