--- a/css/main.css
+++ b/css/main.css
@@ -48,6 +48,14 @@ body {
   color: #bbb;
   margin-bottom: 80px; }
 
+.main-btn {
+  width: 170px;
+  height: 45px;
+  font-family: "Josefin Sans", sans-serif;
+  font-size: 14px;
+  text-transform: uppercase;
+  letter-spacing: 1px; }
+
 .header {
   width: 100%;
   height: 100vh;
