--- a/scss/_component.scss
+++ b/scss/_component.scss
@@ -48,4 +48,9 @@
     font-size: 14px;
     text-transform: uppercase;
     letter-spacing: 1px;
+    color: $color-primary;
+    background-color: transparent;
+    border: 1px solid $color-primary;
+    outline: none;
+    cursor: pointer;
 }
