--- a/css/main.css
+++ b/css/main.css
@@ -59,7 +59,11 @@ body {
   background-color: transparent;
   border: 1px solid #d3ab55;
   outline: none;
-  cursor: pointer; }
+  cursor: pointer;
+  transition: all .4s; }
+  .main-btn:hover {
+    background-color: #d3ab55;
+    color: #262626; }
 
 .header {
   width: 100%;
