--- a/scss/_component.scss
+++ b/scss/_component.scss
@@ -53,4 +53,10 @@
     border: 1px solid $color-primary;
     outline: none;
     cursor: pointer;
+    transition: all .4s;
+
+    &:hover {
+        background-color: $color-primary;
+        color: $color-dark;
+    }
 }
