--- a/css/main.css
+++ b/css/main.css
@@ -79,8 +79,24 @@ body {
     transform: translate(-50%, -50%); }
   .header-banner {
     text-align: center;
-    color: #fff;
     position: absolute;
     top: 50%;
     left: 50%;
     transform: translate(-50%, -50%); }
+
+.about-us {
+  height: 90vh;
+  display: flex;
+  align-items: center; }
+  .about-us-left {
+    width: 40%;
+    position: relative;
+    left: -200px; }
+    .about-us-left img {
+      width: 100%;
+      opacity: .7; }
+  .about-us-right {
+    width: 60%;
+    display: flex;
+    flex-direction: column;
+    align-items: center; }
