--- a/scss/_layout.scss
+++ b/scss/_layout.scss
@@ -12,9 +12,30 @@
 
     &-banner {
         text-align: center;
-        color: #fff;
         @include centering(50%);
     }
+}
 
+.about-us {
+    height: 90vh;
+    display: flex;
+    align-items: center;
 
+    &-left {
+        width: 40%;
+        position: relative;
+        left: -200px;
+
+        img {
+            width: 100%;
+            opacity: .7;
+        }
+    }
+
+    &-right {
+        width: 60%;
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+    }
 }
