--- a/css/main.css
+++ b/css/main.css
@@ -1,3 +1,7 @@
+.card-overlay, .card-image {
+  width: 100%;
+  height: 100%; }
+
 * {
   margin: 0;
   padding: 0; }
@@ -65,6 +69,56 @@ body {
     background-color: #d3ab55;
     color: #262626; }
 
+.card {
+  width: 33.3333%;
+  height: 30vw;
+  position: relative;
+  overflow: hidden; }
+  .card:hover .card-overlay {
+    left: 0; }
+  .card-overlay {
+    position: absolute;
+    top: 0;
+    left: -100%;
+    background-color: rgba(211, 171, 85, 0.6);
+    color: #fff;
+    z-index: 10;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-direction: column;
+    transition: left .7s; }
+    .card-overlay-heading {
+      font-family: "Nunito", sans-serif, cursive;
+      font-size: 50px;
+      font-weight: 300;
+      letter-spacing: 2px;
+      text-transform: capitalized; }
+    .card-overlay-paragraph {
+      font-family: "Josefin Sans", sans-serif;
+      font-size: 30px;
+      margin-bottom: 30px;
+      font-weight: 300;
+      letter-spacing: 2px;
+      text-transform: capitalized; }
+    .card-overlay-btn {
+      width: 150px;
+      height: 40px;
+      color: #d3ab55;
+      background: #fff;
+      font-family: "Josefin Sans", sans-serif;
+      font-size: 14px;
+      font-weight: bold;
+      text-transform: uppercase;
+      letter-spacing: 1px;
+      border: 1px solid #d3ab55;
+      border-radius: 30px;
+      outline: none;
+      cursor: pointer; }
+  .card-image {
+    object-fit: cover;
+    opacity: .5; }
+
 .header {
   width: 100%;
   height: 100vh;
@@ -87,7 +141,9 @@ body {
 .about-us {
   height: 90vh;
   display: flex;
-  align-items: center; }
+  align-items: center;
+  margin-bottom: 10%;
+  margin-top: 5%; }
   .about-us-left {
     width: 40%;
     position: relative;
@@ -116,3 +172,7 @@ body {
       text-align: justify; }
       .about-us-right .description::first-letter {
         padding-left: 50px; }
+
+.gallery .cards-wrapper {
+  display: flex;
+  flex-wrap: wrap; }
