--- a/scss/_base.scss
+++ b/scss/_base.scss
@@ -2,6 +2,7 @@ $color-dark: #262626;
 $color-black:#000;
 $color-primary:#d3ab55;
 $color-secondary:#bbb;
+$color-white:#fff;
 
 $font-dancingScript:'Dancing Script',
 cursive;
@@ -17,10 +18,10 @@ cursive;
     align-items: center;
 }
 
-@mixin textStyles {
+@mixin textStyles($transform: uppercase) {
     font-weight: 300;
     letter-spacing: 2px;
-    text-transform: uppercase;
+    text-transform: $transform;
 }
 
 @mixin centering ($topValue) {
@@ -28,6 +29,11 @@ cursive;
     top: $topValue;
     left: 50%;
     transform: translate(-50%, -50%);
+}
+
+%fullSpace {
+    width: 100%;
+    height: 100%;
 }
 
 * {
