--- a/scss/_component.scss
+++ b/scss/_component.scss
@@ -60,3 +60,63 @@
         color: $color-dark;
     }
 }
+
+.card {
+    width: 33.3333%;
+    height: 30vw;
+    position: relative;
+    overflow: hidden;
+
+    &:hover .card-overlay {
+        left: 0;
+    }
+
+
+    &-overlay {
+        position: absolute;
+        top: 0;
+        left: -100%;
+        background-color: rgba($color-primary, .6);
+        color: $color-white;
+        z-index: 10;
+        @include flexLayout;
+        flex-direction: column;
+        @extend %fullSpace;
+        transition: left .7s;
+
+        &-heading {
+            font-family: $font-nunito;
+            font-size: 50px;
+            @include textStyles(capitalized);
+        }
+
+        &-paragraph {
+            font-family: $font-josefinSans;
+            font-size: 30px;
+            margin-bottom: 30px;
+            @include textStyles(capitalized);
+        }
+
+        &-btn {
+            width: 150px;
+            height: 40px;
+            color: $color-primary;
+            background: $color-white;
+            font-family: $font-josefinSans;
+            font-size: 14px;
+            font-weight: bold;
+            text-transform: uppercase;
+            letter-spacing: 1px;
+            border: 1px solid $color-primary;
+            border-radius: 30px;
+            outline: none;
+            cursor: pointer;
+        }
+    }
+
+    &-image {
+        @extend %fullSpace;
+        object-fit: cover;
+        opacity: .5;
+    }
+}
