--- a/css/main.css
+++ b/css/main.css
@@ -119,6 +119,25 @@ body {
     object-fit: cover;
     opacity: .5; }
 
+.navbar {
+  position: relative;
+  z-index: 200; }
+  .navbar-navigation {
+    display: flex; }
+    .navbar-navigation-left {
+      width: 50vw;
+      height: 100vh;
+      background-color: #262626;
+      position: fixed; }
+      .navbar-navigation-left .left-img {
+        width: 300px;
+        position: absolute; }
+    .navbar-navigation-right {
+      width: 50vw;
+      height: 100vh;
+      background-color: #1f1d1d;
+      position: fixed; }
+
 .header {
   width: 100%;
   height: 100vh;
