--- a/scss/_layout.scss
+++ b/scss/_layout.scss
@@ -1,3 +1,30 @@
+.navbar {
+    position: relative;
+    z-index:200;
+    &-navigation {
+        display: flex;
+
+        &-left {
+            width: 50vw;
+            height: 100vh;
+            background-color: $color-dark;
+            position: fixed;
+
+            .left-img {
+                width: 300px;
+                position: absolute;
+            }
+        }
+
+        &-right {
+            width: 50vw;
+            height: 100vh;
+            background-color: #1f1d1d;
+            position: fixed;
+        }
+    }
+}
+
 .header {
     width: 100%;
     height: 100vh;
