--- a/css/main.css
+++ b/css/main.css
@@ -1,4 +1,4 @@
-.card-overlay, .card-image {
+.card-overlay, .card-image, .hamburger-menu .menu {
   width: 100%;
   height: 100%; }
 
@@ -119,6 +119,22 @@ body {
     object-fit: cover;
     opacity: .5; }
 
+.hamburger-menu {
+  width: 40px;
+  height: 40px;
+  position: fixed;
+  top: 10%;
+  right: 5%; }
+  .hamburger-menu .menu {
+    display: flex;
+    flex-direction: column;
+    justify-content: space-evenly;
+    cursor: pointer; }
+    .hamburger-menu .menu-line {
+      width: 100%;
+      height: 4px;
+      background-color: #d3ab55; }
+
 .navbar {
   position: relative;
   z-index: 200; }
@@ -128,15 +144,49 @@ body {
       width: 50vw;
       height: 100vh;
       background-color: #262626;
-      position: fixed; }
+      position: fixed;
+      left: -50vw; }
       .navbar-navigation-left .left-img {
-        width: 300px;
-        position: absolute; }
+        width: 50%;
+        position: absolute;
+        box-shadow: 0 15px 60px rgba(0, 0, 0, 0.4);
+        opacity: .7;
+        border-radius: 10px; }
+      .navbar-navigation-left .left-img-1 {
+        top: 15%;
+        left: 15%; }
+      .navbar-navigation-left .left-img-2 {
+        top: 35%;
+        left: 25%; }
+      .navbar-navigation-left .left-img-3 {
+        top: 55%;
+        left: 35%; }
     .navbar-navigation-right {
       width: 50vw;
       height: 100vh;
       background-color: #1f1d1d;
-      position: fixed; }
+      position: fixed;
+      right: -50vw;
+      display: flex;
+      justify-content: center;
+      align-items: center; }
+    .navbar-navigation .nav-list-item {
+      list-style: none; }
+    .navbar-navigation .nav-list-link {
+      font-family: "Dancing Script", cursive;
+      font-size: 50px;
+      font-weight: 300;
+      letter-spacing: 2px;
+      text-transform: transform;
+      color: #bbb;
+      text-decoration: none;
+      display: block;
+      margin: 20px;
+      text-align: center;
+      transition: all .5s; }
+      .navbar-navigation .nav-list-link:hover {
+        color: #d3ab55;
+        letter-spacing: 4px; }
 
 .header {
   width: 100%;
