--- a/scss/_layout.scss
+++ b/scss/_layout.scss
@@ -1,6 +1,33 @@
+.hamburger-menu {
+    width: 40px;
+    height: 40px;
+    position: fixed;
+    top: 10%;
+    right: 5%;
+
+
+    .menu {
+        @extend %fullSpace;
+        display: flex;
+        flex-direction: column;
+        justify-content: space-evenly;
+        cursor: pointer;
+
+
+        &-line {
+            width: 100%;
+            height: 4px;
+            background-color: $color-primary;
+        }
+    }
+}
+
+
+
 .navbar {
     position: relative;
-    z-index:200;
+    z-index: 200;
+
     &-navigation {
         display: flex;
 
@@ -9,10 +36,29 @@
             height: 100vh;
             background-color: $color-dark;
             position: fixed;
+            left: -50vw;
 
             .left-img {
-                width: 300px;
+                width: 50%;
                 position: absolute;
+                box-shadow: 0 15px 60px rgba($color-black, .4);
+                opacity: .7;
+                border-radius: 10px;
+            }
+
+            .left-img-1 {
+                top: 15%;
+                left: 15%;
+            }
+
+            .left-img-2 {
+                top: 35%;
+                left: 25%;
+            }
+
+            .left-img-3 {
+                top: 55%;
+                left: 35%;
             }
         }
 
@@ -21,6 +67,31 @@
             height: 100vh;
             background-color: #1f1d1d;
             position: fixed;
+            right: -50vw;
+            @include flexLayout;
+        }
+
+        .nav-list {
+            &-item {
+                list-style: none;
+            }
+
+            &-link {
+                font-family: $font-dancingScript;
+                font-size: 50px;
+                @include textStyles(capitilized);
+                color: $color-secondary;
+                text-decoration: none;
+                display: block;
+                margin: 20px;
+                text-align: center;
+                transition: all .5s;
+
+                &:hover {
+                    color: $color-primary;
+                    letter-spacing: 4px;
+                }
+            }
         }
     }
 }
