--- a/css/main.css
+++ b/css/main.css
@@ -1,4 +1,4 @@
-.card-overlay, .card-image, .hamburger-menu .menu {
+.hamburger-menu .menu, .card-overlay, .card-image {
   width: 100%;
   height: 100%; }
 
@@ -9,17 +9,43 @@
 body {
   background-color: #262626; }
 
+.hamburger-menu {
+  width: 40px;
+  height: 40px;
+  position: fixed;
+  top: 10%;
+  right: 5%;
+  z-index: 300; }
+  .hamburger-menu .menu {
+    display: flex;
+    flex-direction: column;
+    justify-content: space-evenly;
+    cursor: pointer;
+    transition: transform .5s; }
+    .hamburger-menu .menu-line {
+      width: 100%;
+      height: 4px;
+      background-color: #d3ab55;
+      transform-origin: right;
+      transition: all .5s .5s; }
+
 .logo {
+  display: flex;
+  justify-content: center;
+  align-items: center;
   font-size: 70px;
   color: #d3ab55;
   width: 110px;
   height: 110px;
   border: 3px solid #d3ab55;
   border-radius: 50%;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  margin-right: 20px; }
+  margin-right: 20px;
+  text-decoration: none; }
+  @media (max-width: 1000px) {
+    .logo {
+      font-size: 50px;
+      width: 90px;
+      height: 90px; } }
 
 .main-name {
   font-family: "Nunito", sans-serif, cursive;
@@ -28,6 +54,9 @@ body {
   font-weight: 300;
   letter-spacing: 2px;
   text-transform: transform; }
+  @media (max-width: 1000px) {
+    .main-name {
+      font-size: 40px; } }
 
 .sub-name {
   font-family: "Josefin Sans", sans-serif;
@@ -44,13 +73,31 @@ body {
   font-weight: 300;
   color: #d3ab55;
   margin-bottom: 40px; }
+  @media (max-width: 1600px) {
+    .main-heading {
+      font-size: 80px; } }
+  @media (max-width: 1000px) {
+    .main-heading {
+      font-size: 60px; } }
 
 .sub-heading {
   font-family: "Josefin Sans", sans-serif;
   font-size: 60px;
   font-weight: 300;
   color: #bbb;
-  margin-bottom: 80px; }
+  margin-bottom: 80px;
+  text-align: center; }
+  @media (max-width: 1600px) {
+    .sub-heading {
+      font-size: 50px;
+      margin-bottom: 50px; } }
+  @media (max-width: 1300px) {
+    .sub-heading {
+      font-size: 40px;
+      margin-bottom: 30px; } }
+  @media (max-width: 1000px) {
+    .sub-heading {
+      font-size: 30px; } }
 
 .main-btn {
   width: 170px;
@@ -119,21 +166,23 @@ body {
     object-fit: cover;
     opacity: .5; }
 
-.hamburger-menu {
-  width: 40px;
-  height: 40px;
-  position: fixed;
-  top: 10%;
-  right: 5%; }
-  .hamburger-menu .menu {
-    display: flex;
-    flex-direction: column;
-    justify-content: space-evenly;
-    cursor: pointer; }
-    .hamburger-menu .menu-line {
-      width: 100%;
-      height: 4px;
-      background-color: #d3ab55; }
+.checkbox:checked ~ .navbar-navigation .navbar-navigation-left {
+  left: 0; }
+
+.checkbox:checked ~ .navbar-navigation .navbar-navigation-right {
+  right: 0; }
+
+.checkbox:checked ~ .hamburger-menu .menu {
+  transform: rotateZ(90deg); }
+
+.checkbox:checked ~ .hamburger-menu .menu-line-1 {
+  transform: rotateZ(-40deg); }
+
+.checkbox:checked ~ .hamburger-menu .menu-line-2 {
+  opacity: 0; }
+
+.checkbox:checked ~ .hamburger-menu .menu-line-3 {
+  transform: rotateZ(40deg); }
 
 .navbar {
   position: relative;
@@ -145,7 +194,8 @@ body {
       height: 100vh;
       background-color: #262626;
       position: fixed;
-      left: -50vw; }
+      left: -50vw;
+      transition: left 0.8s cubic-bezier(1, 0, 0, 1); }
       .navbar-navigation-left .left-img {
         width: 50%;
         position: absolute;
@@ -169,7 +219,8 @@ body {
       right: -50vw;
       display: flex;
       justify-content: center;
-      align-items: center; }
+      align-items: center;
+      transition: right 0.8s cubic-bezier(1, 0, 0, 1); }
     .navbar-navigation .nav-list-item {
       list-style: none; }
     .navbar-navigation .nav-list-link {
@@ -217,6 +268,9 @@ body {
     width: 40%;
     position: relative;
     left: -200px; }
+    @media (max-width: 1300px) {
+      .about-us-left {
+        left: -150px; } }
     .about-us-left img {
       width: 100%;
       opacity: .7; }
@@ -227,6 +281,9 @@ body {
     align-items: center;
     padding: 0 100px;
     box-sizing: border-box; }
+    @media (max-width: 1300px) {
+      .about-us-right {
+        padding: 30px 0; } }
     .about-us-right .stars {
       margin: 30px 0; }
     .about-us-right .star {
@@ -241,6 +298,10 @@ body {
       text-align: justify; }
       .about-us-right .description::first-letter {
         padding-left: 50px; }
+      @media (max-width: 1600px) {
+        .about-us-right .description {
+          font-size: 18px;
+          margin-bottom: 50px; } }
 
 .gallery .cards-wrapper {
   display: flex;
