--- a/scss/_component.scss
+++ b/scss/_component.scss
@@ -1,13 +1,50 @@
+.hamburger-menu {
+    width: 40px;
+    height: 40px;
+    position: fixed;
+    top: 10%;
+    right: 5%;
+    z-index: 300;
+
+
+    .menu {
+        @extend %fullSpace;
+        display: flex;
+        flex-direction: column;
+        justify-content: space-evenly;
+        cursor: pointer;
+        transition: transform .5s;
+
+
+        &-line {
+            width: 100%;
+            height: 4px;
+            background-color: $color-primary;
+            transform-origin: right;
+            transition: all .5s .5s;
+        }
+    }
+}
+
+
+
 
 .logo {
+    @include flexLayout;
     font-size: 70px;
     color: $color-primary;
     width: 110px;
     height: 110px;
     border: 3px solid $color-primary;
     border-radius: 50%;
-    @include flexLayout;
     margin-right: 20px;
+    text-decoration: none;
+
+    @media (max-width:1000px) {
+        font-size: 50px;
+        width: 90px;
+        height: 90px;
+    }
 }
 
 .main-name {
@@ -15,6 +52,10 @@
     font-size: 50px;
     color: $color-secondary;
     @include textStyles;
+
+    @media (max-width:1000px) {
+        font-size: 40px;
+    }
 }
 
 .sub-name {
@@ -31,6 +72,14 @@
     font-weight: 300;
     color: $color-primary;
     margin-bottom: 40px;
+
+    @media(max-width: 1600px) {
+        font-size: 80px;
+    }
+
+    @media(max-width: 1000px) {
+        font-size: 60px;
+    }
 }
 
 .sub-heading {
@@ -39,6 +88,21 @@
     font-weight: 300;
     color: $color-secondary;
     margin-bottom: 80px;
+    text-align: center;
+
+    @media(max-width: 1600px) {
+        font-size: 50px;
+        margin-bottom: 50px;
+    }
+
+    @media(max-width: 1300px) {
+        font-size: 40px;
+        margin-bottom: 30px;
+    }
+
+    @media(max-width: 1000px) {
+        font-size: 30px;
+    }
 }
 
 .main-btn {
