media for 900px on card overlay

--- a/scss/_component.scss
+++ b/scss/_component.scss
@@ -151,6 +151,10 @@
             font-family: $font-nunito;
             font-size: 50px;
             @include textStyles(capitalized);
+
+            @media(max-width: 900px) {
+                font-size: 35px;
+            }
         }
 
         &-paragraph {
@@ -158,6 +162,10 @@
             font-size: 30px;
             margin-bottom: 30px;
             @include textStyles(capitalized);
+
+            @media(max-width: 900px) {
+                font-size: 20px;
+            }
         }
 
         &-btn {
@@ -174,6 +182,12 @@
             border-radius: 30px;
             outline: none;
             cursor: pointer;
+
+            @media(max-width: 900px) {
+                font-size: 12px;
+                height: 30px;
+                width: 130px;
+            }
         }
     }
 
