--- a/scss/_layout.scss
+++ b/scss/_layout.scss
@@ -151,12 +151,20 @@
 
         .stars {
             margin: 30px 0;
+
+            @media(max-width: 1000px) {
+                margin: 15px 0;
+            }
         }
 
         .star {
             font-size: 15px;
             color: $color-primary;
             margin-left: 10px;
+
+            @media(max-width: 1000px) {
+                font-size: 12px;
+            }
         }
 
         .description {
@@ -173,6 +181,10 @@
             @media(max-width: 1600px) {
                 font-size: 18px;
                 margin-bottom: 50px;
+            }
+
+            @media(max-width: 1000px) {
+                font-size: 14px;
             }
         }
 
@@ -216,6 +228,10 @@
 
             &:hover {
                 color: $color-primary;
+            }
+
+            @media(max-width: 1000px) {
+                font-size: 35px;
             }
         }
     }
