--- a/css/main.css
+++ b/css/main.css
@@ -141,6 +141,9 @@ body {
       font-weight: 300;
       letter-spacing: 2px;
       text-transform: transform; }
+      @media (max-width: 900px) {
+        .card-overlay-heading {
+          font-size: 35px; } }
     .card-overlay-paragraph {
       font-family: "Josefin Sans", sans-serif;
       font-size: 30px;
@@ -148,6 +151,9 @@ body {
       font-weight: 300;
       letter-spacing: 2px;
       text-transform: transform; }
+      @media (max-width: 900px) {
+        .card-overlay-paragraph {
+          font-size: 20px; } }
     .card-overlay-btn {
       width: 150px;
       height: 40px;
@@ -162,6 +168,11 @@ body {
       border-radius: 30px;
       outline: none;
       cursor: pointer; }
+      @media (max-width: 900px) {
+        .card-overlay-btn {
+          font-size: 12px;
+          height: 30px;
+          width: 130px; } }
   .card-image {
     object-fit: cover;
     opacity: .5; }
@@ -286,10 +297,16 @@ body {
         padding: 30px 0; } }
     .about-us-right .stars {
       margin: 30px 0; }
+      @media (max-width: 1000px) {
+        .about-us-right .stars {
+          margin: 15px 0; } }
     .about-us-right .star {
       font-size: 15px;
       color: #d3ab55;
       margin-left: 10px; }
+      @media (max-width: 1000px) {
+        .about-us-right .star {
+          font-size: 12px; } }
     .about-us-right .description {
       font-family: "Josefin Sans", sans-serif;
       font-size: 25px;
@@ -302,6 +319,9 @@ body {
         .about-us-right .description {
           font-size: 18px;
           margin-bottom: 50px; } }
+      @media (max-width: 1000px) {
+        .about-us-right .description {
+          font-size: 14px; } }
 
 .gallery .cards-wrapper {
   display: flex;
@@ -331,6 +351,9 @@ body {
       transition: color .7s; }
       .footer .social-media-link:hover {
         color: #d3ab55; }
+      @media (max-width: 1000px) {
+        .footer .social-media-link {
+          font-size: 35px; } }
   .footer-copyright-paragraph {
     font-family: "Josefin Sans", sans-serif;
     font-size: 18px;
