--- a/css/main.css
+++ b/css/main.css
@@ -16,6 +16,15 @@ body {
   top: 10%;
   right: 5%;
   z-index: 300; }
+  @media (max-width: 900px) {
+    .hamburger-menu {
+      font-size: 35px;
+      width: 35px;
+      height: 35px; } }
+  @media (max-width: 500px) {
+    .hamburger-menu {
+      width: 25px;
+      height: 25px; } }
   .hamburger-menu .menu {
     display: flex;
     flex-direction: column;
@@ -28,6 +37,12 @@ body {
       background-color: #d3ab55;
       transform-origin: right;
       transition: all .5s .5s; }
+      @media (max-width: 800px) {
+        .hamburger-menu .menu-line {
+          height: 3px; } }
+      @media (max-width: 500px) {
+        .hamburger-menu .menu-line {
+          height: 2px; } }
 
 .logo {
   display: flex;
@@ -46,6 +61,12 @@ body {
       font-size: 50px;
       width: 90px;
       height: 90px; } }
+  @media (max-width: 500px) {
+    .logo {
+      height: 50px;
+      width: 50px;
+      font-size: 30px;
+      border-width: 2px; } }
 
 .main-name {
   font-family: "Nunito", sans-serif, cursive;
@@ -57,6 +78,10 @@ body {
   @media (max-width: 1000px) {
     .main-name {
       font-size: 40px; } }
+  @media (max-width: 500px) {
+    .main-name {
+      font-size: 20px;
+      text-align: center; } }
 
 .sub-name {
   font-family: "Josefin Sans", sans-serif;
@@ -66,6 +91,10 @@ body {
   font-weight: 300;
   letter-spacing: 2px;
   text-transform: transform; }
+  @media (max-width: 500px) {
+    .sub-name {
+      font-size: 12px;
+      text-align: center; } }
 
 .main-heading {
   font-family: "Dancing Script", cursive;
@@ -79,6 +108,10 @@ body {
   @media (max-width: 1000px) {
     .main-heading {
       font-size: 60px; } }
+  @media (max-width: 500px) {
+    .main-heading {
+      font-size: 40px;
+      margin-bottom: 20px; } }
 
 .sub-heading {
   font-family: "Josefin Sans", sans-serif;
@@ -98,6 +131,10 @@ body {
   @media (max-width: 1000px) {
     .sub-heading {
       font-size: 30px; } }
+  @media (max-width: 500px) {
+    .sub-heading {
+      font-size: 20px;
+      margin-bottom: 10px; } }
 
 .main-btn {
   width: 170px;
@@ -115,6 +152,16 @@ body {
   .main-btn:hover {
     background-color: #d3ab55;
     color: #262626; }
+  @media (max-width: 800px) {
+    .main-btn {
+      width: 150px;
+      height: 35px;
+      font-size: 12px; } }
+  @media (max-width: 500px) {
+    .main-btn {
+      width: 130px;
+      height: 30px;
+      font-size: 10px; } }
 
 .card {
   width: 33.3333%;
@@ -144,6 +191,12 @@ body {
       @media (max-width: 900px) {
         .card-overlay-heading {
           font-size: 35px; } }
+      @media (max-width: 650px) {
+        .card-overlay-heading {
+          font-size: 25px; } }
+      @media (max-width: 500px) {
+        .card-overlay-heading {
+          display: none; } }
     .card-overlay-paragraph {
       font-family: "Josefin Sans", sans-serif;
       font-size: 30px;
@@ -154,6 +207,12 @@ body {
       @media (max-width: 900px) {
         .card-overlay-paragraph {
           font-size: 20px; } }
+      @media (max-width: 650px) {
+        .card-overlay-paragraph {
+          font-size: 15px; } }
+      @media (max-width: 500px) {
+        .card-overlay-paragraph {
+          display: none; } }
     .card-overlay-btn {
       width: 150px;
       height: 40px;
@@ -173,6 +232,11 @@ body {
           font-size: 12px;
           height: 30px;
           width: 130px; } }
+      @media (max-width: 650px) {
+        .card-overlay-btn {
+          font-size: 10px;
+          width: 100px;
+          height: 30px; } }
   .card-image {
     object-fit: cover;
     opacity: .5; }
@@ -262,6 +326,12 @@ body {
     top: 15%;
     left: 50%;
     transform: translate(-50%, -50%); }
+    @media (max-width: 500px) {
+      .header .brand {
+        position: absolute;
+        top: 12%;
+        left: 50%;
+        transform: translate(-50%, -50%); } }
   .header-banner {
     text-align: center;
     position: absolute;
@@ -275,6 +345,9 @@ body {
   align-items: center;
   margin-bottom: 10%;
   margin-top: 5%; }
+  @media (max-width: 900px) {
+    .about-us {
+      height: 70vh; } }
   .about-us-left {
     width: 40%;
     position: relative;
@@ -282,6 +355,9 @@ body {
     @media (max-width: 1300px) {
       .about-us-left {
         left: -150px; } }
+    @media (max-width: 800px) {
+      .about-us-left {
+        display: none; } }
     .about-us-left img {
       width: 100%;
       opacity: .7; }
@@ -294,7 +370,10 @@ body {
     box-sizing: border-box; }
     @media (max-width: 1300px) {
       .about-us-right {
-        padding: 30px 0; } }
+        padding: 0 50px; } }
+    @media (max-width: 800px) {
+      .about-us-right {
+        width: 100%; } }
     .about-us-right .stars {
       margin: 30px 0; }
       @media (max-width: 1000px) {
@@ -322,6 +401,9 @@ body {
       @media (max-width: 1000px) {
         .about-us-right .description {
           font-size: 14px; } }
+      @media (max-width: 500px) {
+        .about-us-right .description {
+          font-size: 12px; } }
 
 .gallery .cards-wrapper {
   display: flex;
@@ -333,6 +415,9 @@ body {
   justify-content: center;
   align-items: center;
   flex-direction: column; }
+  @media (max-width: 500px) {
+    .footer {
+      padding: 40px 0; } }
   .footer-header {
     display: flex;
     align-items: center;
@@ -342,6 +427,10 @@ body {
     width: 300px;
     justify-content: space-between;
     margin-bottom: 70px; }
+    @media (max-width: 500px) {
+      .footer .social-media {
+        width: 200px;
+        margin-bottom: 40px; } }
     .footer .social-media-item {
       list-style: none; }
     .footer .social-media-link {
@@ -361,3 +450,8 @@ body {
     font-weight: 300;
     letter-spacing: 2px;
     text-transform: transform; }
+    @media (max-width: 800px) {
+      .footer-copyright-paragraph {
+        width: 70%;
+        margin: auto;
+        text-align: center; } }
