--- a/scss/_component.scss
+++ b/scss/_component.scss
@@ -6,6 +6,17 @@
     right: 5%;
     z-index: 300;
 
+    @media(max-width: 900px) {
+        font-size: 35px;
+        width: 35px;
+        height: 35px;
+    }
+
+    @media(max-width: 500px) {
+        width: 25px;
+        height: 25px;
+    }
+
 
     .menu {
         @extend %fullSpace;
@@ -22,6 +33,15 @@
             background-color: $color-primary;
             transform-origin: right;
             transition: all .5s .5s;
+
+            @media(max-width: 800px) {
+                height: 3px;
+            }
+
+            @media(max-width: 500px) {
+                height: 2px;
+            }
+
         }
     }
 }
@@ -45,6 +65,13 @@
         width: 90px;
         height: 90px;
     }
+
+    @media(max-width: 500px) {
+        height: 50px;
+        width: 50px;
+        font-size: 30px;
+        border-width: 2px;
+    }
 }
 
 .main-name {
@@ -56,6 +83,11 @@
     @media (max-width:1000px) {
         font-size: 40px;
     }
+
+    @media(max-width: 500px) {
+        font-size: 20px;
+        text-align: center;
+    }
 }
 
 .sub-name {
@@ -64,6 +96,11 @@
     color: $color-secondary;
     text-align: center;
     @include textStyles;
+
+    @media(max-width: 500px) {
+        font-size: 12px;
+        text-align: center;
+    }
 }
 
 .main-heading {
@@ -80,6 +117,12 @@
     @media(max-width: 1000px) {
         font-size: 60px;
     }
+
+    @media(max-width: 500px) {
+        font-size: 40px;
+        margin-bottom: 20px;
+    }
+
 }
 
 .sub-heading {
@@ -103,6 +146,11 @@
     @media(max-width: 1000px) {
         font-size: 30px;
     }
+
+    @media(max-width: 500px) {
+        font-size: 20px;
+        margin-bottom: 10px;
+    }
 }
 
 .main-btn {
@@ -122,6 +170,18 @@
     &:hover {
         background-color: $color-primary;
         color: $color-dark;
+    }
+
+    @media(max-width: 800px) {
+        width: 150px;
+        height: 35px;
+        font-size: 12px;
+    }
+
+    @media(max-width: 500px) {
+        width: 130px;
+        height: 30px;
+        font-size: 10px;
     }
 }
 
@@ -155,6 +215,15 @@
             @media(max-width: 900px) {
                 font-size: 35px;
             }
+
+            @media(max-width: 650px) {
+                font-size: 25px;
+            }
+
+            @media(max-width: 500px) {
+                display: none;
+            }
+
         }
 
         &-paragraph {
@@ -165,6 +234,14 @@
 
             @media(max-width: 900px) {
                 font-size: 20px;
+            }
+
+            @media(max-width: 650px) {
+                font-size: 15px;
+            }
+
+            @media(max-width: 500px) {
+                display: none;
             }
         }
 
@@ -187,6 +264,12 @@
                 font-size: 12px;
                 height: 30px;
                 width: 130px;
+            }
+
+            @media(max-width: 650px) {
+                font-size: 10px;
+                width: 100px;
+                height: 30px;
             }
         }
     }
