--- a/scss/_layout.scss
+++ b/scss/_layout.scss
@@ -107,6 +107,10 @@
         display: flex;
         align-items: center;
         @include centering(15%);
+
+        @media(max-width: 500px) {
+            @include centering(12%);
+        }
     }
 
     &-banner {
@@ -122,6 +126,10 @@
     margin-bottom: 10%;
     margin-top: 5%;
 
+    @media(max-width: 900px) {
+        height: 70vh;
+    }
+
     &-left {
         width: 40%;
         position: relative;
@@ -130,6 +138,12 @@
         @media(max-width: 1300px) {
             left: -150px;
         }
+
+        @media(max-width: 800px) {
+            display: none;
+        }
+
+
 
         img {
             width: 100%;
@@ -146,7 +160,11 @@
         box-sizing: border-box;
 
         @media(max-width: 1300px) {
-            padding: 30px 0;
+            padding: 0 50px;
+        }
+
+        @media(max-width: 800px) {
+            width: 100%;
         }
 
         .stars {
@@ -186,6 +204,11 @@
             @media(max-width: 1000px) {
                 font-size: 14px;
             }
+
+            @media(max-width: 500px) {
+                font-size: 12px;
+            }
+
         }
 
     }
@@ -204,6 +227,10 @@
     @include flexLayout;
     flex-direction: column;
 
+    @media(max-width: 500px) {
+        padding: 40px 0;
+    }
+
     &-header {
         display: flex;
         align-items: center;
@@ -215,6 +242,11 @@
         width: 300px;
         justify-content: space-between;
         margin-bottom: 70px;
+
+        @media(max-width: 500px) {
+            width: 200px;
+            margin-bottom: 40px;
+        }
 
         &-item {
             list-style: none;
@@ -241,5 +273,11 @@
         font-size: 18px;
         color: $color-secondary;
         @include textStyles(capitilized);
+
+        @media(max-width: 800px) {
+            width: 70%;
+            margin: auto;
+            text-align: center;
+        }
     }
 }
