--- a/css/main.css
+++ b/css/main.css
@@ -271,21 +271,39 @@ body {
       position: fixed;
       left: -50vw;
       transition: left 0.8s cubic-bezier(1, 0, 0, 1); }
+      @media (max-width: 800px) {
+        .navbar-navigation-left {
+          display: none; } }
       .navbar-navigation-left .left-img {
         width: 50%;
         position: absolute;
         box-shadow: 0 15px 60px rgba(0, 0, 0, 0.4);
         opacity: .7;
         border-radius: 10px; }
+        @media (max-width: 1300px) {
+          .navbar-navigation-left .left-img {
+            width: 55%; } }
+        @media (max-width: 1000px) {
+          .navbar-navigation-left .left-img {
+            width: 65%; } }
       .navbar-navigation-left .left-img-1 {
         top: 15%;
         left: 15%; }
+        @media (max-width: 1000px) {
+          .navbar-navigation-left .left-img-1 {
+            left: 5%; } }
       .navbar-navigation-left .left-img-2 {
         top: 35%;
         left: 25%; }
+        @media (max-width: 1000px) {
+          .navbar-navigation-left .left-img-2 {
+            left: 15%; } }
       .navbar-navigation-left .left-img-3 {
         top: 55%;
         left: 35%; }
+        @media (max-width: 1000px) {
+          .navbar-navigation-left .left-img-3 {
+            left: 25%; } }
     .navbar-navigation-right {
       width: 50vw;
       height: 100vh;
@@ -296,6 +314,10 @@ body {
       justify-content: center;
       align-items: center;
       transition: right 0.8s cubic-bezier(1, 0, 0, 1); }
+      @media (max-width: 800px) {
+        .navbar-navigation-right {
+          width: 100vw;
+          right: -100vw; } }
     .navbar-navigation .nav-list-item {
       list-style: none; }
     .navbar-navigation .nav-list-link {
@@ -313,6 +335,9 @@ body {
       .navbar-navigation .nav-list-link:hover {
         color: #d3ab55;
         letter-spacing: 4px; }
+      @media (max-width: 600px) {
+        .navbar-navigation .nav-list-link {
+          font-size: 40px; } }
 
 .header {
   width: 100%;
@@ -443,6 +468,9 @@ body {
       @media (max-width: 1000px) {
         .footer .social-media-link {
           font-size: 35px; } }
+      @media (max-width: 500px) {
+        .footer .social-media-link {
+          font-size: 25px; } }
   .footer-copyright-paragraph {
     font-family: "Josefin Sans", sans-serif;
     font-size: 18px;
@@ -455,3 +483,6 @@ body {
         width: 70%;
         margin: auto;
         text-align: center; } }
+    @media (max-width: 500px) {
+      .footer-copyright-paragraph {
+        font-size: 14px; } }
